--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="loading-container">
         <div class="background-image"></div>
         <div class="loading-content">
-            <h1>STAR WARS<br>THE CLONE WARS</h1>
-            <p class="loading-text">LOADING 3D ASSETS</p>
+            <h1>Royalty<br>IMPERIAL OCCUPATION RP</h1>
+            <p class="loading-text">LOADING SERVER ASSETS</p>
             <div class="loading-spinner"></div>
         </div>
     </div>
