--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="loading-container">
         <div class="background-image"></div>
         <div class="loading-content">
-            <h1>Royalty<br>IMPERIAL OCCUPATION RP</h1>
+            <img src="royalty_logo.png" alt="Logo" class="logo">
+            <h1><b>IMPERIAL OCCUPATION RP</b></h1>
             <p class="loading-text">LOADING SERVER ASSETS</p>
             <div class="loading-spinner"></div>
         </div>
